versioned_docs/version-1.32/byoc/gcp/index.mdx
---
title: Okteto BYOC on GCP
description: How to get started with Okteto BYOC on GCP
sidebar_label: Okteto BYOC on GCP
---

import variables from '../../variables.json';
import CodeBlock from '@theme/CodeBlock';

Okteto's Bring Your Own Cloud (BYOC) model allows you to run the Okteto Platform in your own GCP project while still benefiting from a fully managed experience. This guide outlines the minimal steps required to prepare your Google Cloud environment so Okteto can install and operate the platform.

## 🔧 Setup Requirements

Getting started with Okteto BYOC on GCP is simple. You’ll just need to:

- Create a **dedicated GCP project** for Okteto to use  
  (We recommend naming it something like `okteto-byoc`)

> This project should be isolated from your production workloads to ensure security and ease of management.

## Step 1: Share the Project Details

Once the project is created, contact your Okteto representative and share the following:

- The name and ID of your GCP project
- The email address of the Okteto service account (provided by your sales contact) to which permissions should be granted

## Step 2: Grant Access

Your sales rep will provide a service account that Okteto uses to access your project. Grant that service account the **Editor** role in the project you just created:

```bash
gcloud projects add-iam-policy-binding YOUR_PROJECT_ID \
  --member="serviceAccount:okteto-infra@yourdomain.iam.gserviceaccount.com" \
  --role="roles/editor"
```
Replace YOUR_PROJECT_ID and the service account as instructed by your technical contact. The service account will look like an email address, similar to the above example.

## ✅ What Happens Next

Once you’ve granted access, we’ll take it from here.

Our team will:
- Set up and configure a GKE cluster in your GCP project
- Install Okteto into the GKE cluster
- Keep it updated securely based on our GitOps practices
- Ensure the platform is fully operational and ready for use

You’ll be notified once installation is complete and receive onboarding support to help your team start building with Okteto.