versioned_docs/version-1.48/byoc/gcp/index.mdx
---
title: Okteto BYOC on GCP
description: How to get started with Okteto BYOC on GCP
sidebar_label: Okteto BYOC on GCP
---

import variables from '../../variables.json';
import CodeBlock from '@theme/CodeBlock';

Okteto's Bring Your Own Cloud (BYOC) model allows you to run the Okteto Platform in your own GCP project while still benefiting from a fully managed experience. This guide outlines the minimal steps required to prepare your Google Cloud environment so Okteto can install and operate the platform.

## 🔧 Setup Requirements

Getting started with Okteto BYOC on GCP is simple. You’ll just need to:

- Create a **dedicated GCP project** for Okteto to use  
  (We recommend naming it something like `okteto-byoc`)

> This project should be isolated from your production workloads to ensure security and ease of management.

## Step 1: Share the Project Details

Once the project is created, contact your Okteto representative and share the following:

- The name and ID of your GCP project

## Step 2: Grant Access

Your Okteto representative will provide the email address of the Okteto service account. Grant that service account the **Admin** role in the project you just created:

```bash
gcloud projects add-iam-policy-binding YOUR_PROJECT_ID \
  --member="serviceAccount:OKTETO_SERVICE_ACCOUNT_EMAIL" \
  --role="roles/admin"
```
Replace `YOUR_PROJECT_ID` with your GCP project ID and `OKTETO_SERVICE_ACCOUNT_EMAIL` with the service account email provided by your Okteto representative.

## ✅ What Happens Next

Once you've granted access, we'll take it from here.

Our team will:
- Set up and configure a GKE cluster in your GCP project
- Install Okteto into the GKE cluster
- Keep it updated securely based on our GitOps practices
- Ensure the platform is fully operational and ready for use

You'll be notified once installation is complete and receive onboarding support to help your team start building with Okteto.

## ⚠️ Cluster Management Guidelines

Once Okteto is installed, **do not manually modify the GKE cluster or related infrastructure** through the GCP Console, `gcloud` CLI, or Terraform.

This includes:
- GKE cluster configuration (node pools, machine types, disk configurations)
- Kubernetes resources in Okteto-managed namespaces
- Networking, load balancers, or storage resources created by Okteto

Manual modifications can cause service degradation, state inconsistencies, and break our SLA commitments. If you need infrastructure changes, please contact your Okteto representative.

For more details, see the [Cluster Management Restrictions](../#important-cluster-management-restrictions) section in the main BYOC documentation.
